@@ -1,3 +1,7 @@
+2011-05-11  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* PixelExactDrawing-test: Add a new test
+
 2011-04-30  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* MainMenu.gorm: Add an Edit and a Format menu.
